--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
 #homepage {
   background-color: #1e1f23;
 }
-#homepage img {
-  height: 55vw;
-  width: 55vw;
-}
 
+#details {
+  width: 90%;
+  margin: auto;
+}
 .card {
   background-color: #1e1f23;
   align-items: center;
@@ -36,7 +36,11 @@ h4 {
   font-size: 10vw;
 }
 #temptoday span {
-  font-size: 3vw;
+  font-size: 10vw;
+  font-weight: 400;
+}
+#temptoday span:last-of-type {
+  font-size: 5vw;
   font-weight: 400;
 }
 
@@ -50,4 +54,34 @@ h4 {
   bottom: 0;
   width: 81.5%;
   margin-inline: auto;
+}
+.card-forecast {
+  width: 20%;
+}
+#today-weather h2 {
+  padding-left: 4vw;
+}
+.todaydiv {
+  padding-left: 4vw;
+}
+@media (min-width: 768px) {
+  #homepage img {
+    height: 42vw;
+    width: 42vw;
+  }
+}
+@media (min-width: 992px) {
+  #today-weather h2 {
+    font-size: 5vw;
+    padding-left: 4vw;
+    padding-top: 2vw;
+  }
+  #today-weather img {
+    height: 18vw;
+    width: 18vw;
+  }
+  .todaydiv {
+    font-size: 1.8vw;
+    padding-left: 4vw;
+  }
 }
